components/login/login.css
.login-page {
  display: flex;
  width: 100%;
  align-items: center;
  justify-content: center;
  gap: 5rem;
  min-height: 80vh;
  flex-wrap: wrap;
}

.login-container {
  width: 80%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.login-title {
  font-family: "Fredoka One", cursive;
  text-transform: uppercase;
  letter-spacing: 1rem;
  color: var(--violet-color);
}

.login-username,
.login-password {
  width: 90%;
  justify-content: center;
}

.login-username > input {
  flex: 1 1 auto;
}

.login-password > input {
  flex: 1 1 auto;
}

.login-sso {
  flex-direction: column;
}

.login-sso-icons {
  font-size: 3rem;
}

.login-reminder {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  width: 80%;
}

.create-account {
  text-align: center;
}

.create-account i {
  padding-left: 10px;
}

label,
a {
  color: var(--violet-color);
}

